--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,8 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: windows-latest
     steps:
-      - name: build
-      	run: |
-      	  call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat"
-      	  devenv unlockfps.sln /ReBuild
+      - run: call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat"
+      - run: devenv unlockfps.sln /ReBuild
       - run: echo "🎉 Deploy to release 🎉"
       - name: release
         uses: softprops/action-gh-release@v1
@@ -19,4 +17,4 @@ jobs:
           name: ${{env.RELEASE-NAME}}
           tag_name: ${{env.TAG}}
           files: |
-              x64/Debug/unlockfps.exe
+            x64/Debug/unlockfps.exe
